--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "packageManager": "pnpm@10.8.1",
   "dependencies": {
     "@dotenvx/dotenvx": "^1.45.2"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2"
   }
 }
