feat: add import alias for src

--- a/apps/backend/.prettierrc
+++ b/apps/backend/.prettierrc
@@ -5,5 +5,5 @@
   "importOrderParserPlugins": ["typescript", "jsx", "decorators"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
-  "importOrder": ["^@(.*)$", "^[^./](.*)$", "^[./]"]
+  "importOrder": ["^@([^/]+)/(.*)$", "^[^./@](.*)$", "^@/(.*)$", "^[./]"]
 }
