--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -29,6 +29,9 @@
       {
         "transform": "typia/lib/transform"
       }
-    ]
+    ],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
