--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -35,6 +35,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "6.11.1",
+    "hyperid": "^3.3.0",
     "nestlogged-fastify": "^3.6.1",
     "prisma": "^6.11.1",
     "reflect-metadata": "^0.2.2",
