chore: update importOrderParserPlugins to use decorators-legacy to fix parameter decorator parsing error

--- a/apps/backend/.prettierrc
+++ b/apps/backend/.prettierrc
@@ -2,7 +2,7 @@
   "singleQuote": true,
   "trailingComma": "all",
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
-  "importOrderParserPlugins": ["typescript", "jsx", "decorators"],
+  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "importOrder": ["^@([^/]+)/(.*)$", "^[^./@](.*)$", "^@/(.*)$", "^[./]"]
