--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,6 +34,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-fastify": "^11.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "6.11.1",
     "hyperid": "^3.3.0",
