--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0",
     "nestia": "^7.0.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
@@ -89,6 +90,9 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "@/(.*)": "<rootDir>/$1"
+    }
   }
 }
