--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -38,7 +38,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "6.11.1",
     "hyperid": "^3.3.0",
-    "nestlogged-fastify": "3.6.2-typefix",
+    "nestlogged-fastify": "3.6.3",
     "prisma": "^6.11.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
