--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,6 +26,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@nestia/core": "^7.0.1",
     "@nestia/e2e": "^7.0.1",
     "@nestia/fetcher": "^7.0.1",
@@ -33,7 +34,6 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "6.11.1",
