docs: add redocly openapi documentation

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,6 +19,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "ts-patch install",
+    "nestia": "nestia",
+    "docs": "nestia swagger && redocly",
+    "docs:serve": "pnpm run docs preview-docs api/swagger.json",
+    "docs:lint": "pnpm run docs lint api/swagger.json",
     "db": "prisma",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -50,6 +54,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@redocly/cli": "^1.34.4",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
