--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -48,6 +48,7 @@
     "typia": "^9.4.0"
   },
   "devDependencies": {
+    "@shared/sdk": "workspace:*",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestia/benchmark": "^7.0.1",
