fix: add FRONTEND_PORT env to not conflict with backend

--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,8 @@ DOTENV_PUBLIC_KEY_DEVELOPMENT="0216031e6f14158f4bdadfe0c905b1eac72572beb31363742
 # .env.development
 
 BACKEND_HOST="localhost"
-BACKEND_PORT=3000
+BACKEND_PORT=3001
+FRONTEND_PORT=3000
 DATABASE_URL="mysql://theta:theta@localhost:3306/theta"
 
 DISCORD_CLIENT_ID="1392312291042787415"
