ci: fuck windows

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,8 @@
 packages:
-  - "packages/*"
-  - "apps/*"
+  - 'packages/*'
+  - 'apps/*'
 
 publicHoistPattern:
-  - "fastify"
+  - 'fastify'
+
+shellEmulator: true
