--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2021",
-    "lib": ["DOM", "ES2021"],
-    "module": "commonjs",
+    "target": "esnext",
+    "lib": ["DOM", "ESNext"],
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "declaration": true,
     "sourceMap": true,
     "outDir": "./lib",
