feat: add CORS headers with AppMiddleware

--- a/.env.development
+++ b/.env.development
@@ -10,7 +10,9 @@ BACKEND_HOST="localhost"
 BACKEND_PORT=3001
 VITE_BACKEND_HOST="localhost"
 VITE_BACKEND_PORT=3001
+FRONTEND_HOST="localhost"
 FRONTEND_PORT=3000
+FRONTEND_ORIGIN="http://localhost:3000"
 DATABASE_URL="mysql://theta:theta@localhost:3306/theta"
 
 DISCORD_CLIENT_ID="1392312291042787415"
